--- a/css/styles.css
+++ b/css/styles.css
@@ -793,6 +793,18 @@ body {
 	letter-spacing: 0.01em;
 	color: rgba(117, 117, 117, 0.5);
 }
+.modal-form-check-desc {
+	display: flex;
+	align-items: center;
+	margin-bottom: 24px;
+
+	font-family: "Roboto";
+	font-size: 12px;
+	line-height: 1.3;
+	letter-spacing: 0.04em;
+	color: #757575;
+}
+
 /* .modal-form-check-desc::before {
 	display: block;
 	width: 16px;
@@ -818,6 +830,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-right: 8px;
 	width: 16px;
 	height: 16px;
 	border: 1.25px solid #2e2f42;
@@ -836,4 +849,117 @@ body {
 }
 .modal-form-check:checked + .modal-form-check-desc .agreed-icon {
 	opacity: 1;
+}
+.modal-form-check:focus + .modal-form-check-desc .modal-form-fake-checkbox {
+	outline: none;
+	border: 1.25px solid var(--brand-color);
+}
+.modal-form-submit {
+	align-self: center;
+	min-width: 170px;
+
+	display: inline-block;
+	padding-bottom: 16px;
+	padding-left: 32px;
+	padding-top: 16px;
+	padding-right: 32px;
+	border-radius: 4px;
+
+	background-color: var(--brand-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	color: #fff;
+	border: transparent;
+
+	font-family: "Roboto";
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	cursor: pointer;
+}
+.modal-form-submit:hover,
+.modal-form-submit:focus {
+	outline: none;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.modal-form-submit:active {
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	background-color: #404bbf;
+	color: var(--white-color);
+}
+
+/* Subscription Submit */
+.subscription-btn {
+	margin-left: 80px;
+}
+.footer-submit-form {
+	display: flex;
+	justify-content: center;
+	margin-top: 16px;
+}
+.subscribe {
+	font-family: "Roboto";
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: #ffffff;
+}
+.submit-form-input {
+	align-items: center;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-left: 16px;
+	width: 264px;
+	height: 40px;
+	margin-right: 24px;
+
+	border: 1px solid;
+	border-color: rgba(255, 255, 255, 0.3);
+	outline: none;
+	border-radius: 4px;
+	background-color: var(--maintext-color);
+	transition: border-color var(--transition-dur-and-func);
+}
+
+.submit-form-input::placeholder {
+	font-family: "Roboto";
+	font-size: 12px;
+	line-height: 2;
+	letter-spacing: 0.04em;
+	color: rgba(255, 255, 255, 0.6);
+}
+
+.submit-form-input:focus {
+	outline: none;
+	border-color: var(--brand-color);
+}
+.submit-form-btn {
+	display: flex;
+	min-width: 168px;
+	height: 40px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-left: 24px;
+
+	background-color: var(--brand-color);
+	border-radius: 4px;
+	border-color: transparent;
+	font-family: "Roboto";
+
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.5;
+
+	letter-spacing: 0.06em;
+	color: #ffffff;
+}
+.submit-form-btn::after {
+	content: "";
+	margin-left: 16px;
+	margin-right: 24px;
+	width: 24px;
+	height: 20px;
+
+	background-image: url(../images/icon-send.svg);
 }
