--- a/css/styles.css
+++ b/css/styles.css
@@ -682,14 +682,24 @@ body {
 	background-color: #e7e9fc;
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	padding: 0;
-	transition: outline var(--transition-dur-and-func), box-shadow var(--transition-dur-and-func);
+	transition: outline var(--transition-dur-and-func), box-shadow var(--transition-dur-and-func),
+		background-color var(--transition-dur-and-func);
 }
 
 .modal-close-btn:hover,
 .modal-close-btn:focus {
 	outline: transparent;
+	background-color: #404bbf;
 	box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+.modal-close-btn-icon {
+	transition: fill var(--transition-dur-and-func);
+}
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
+	fill: #fff;
+}
+
 .modal {
 	padding-top: 72px;
 	padding-left: 24px;
@@ -962,4 +972,7 @@ body {
 	height: 20px;
 
 	background-image: url(../images/icon-send.svg);
+}
+.privacy-agreed {
+	color: var(--brand-color);
 }
